--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="56" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="56" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -503,7 +503,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>​Always check the URL and verify the contribution address before sending ETH.</p><p><span style="font-size: 1.07rem;">​​</span></p><div>We only accept ETH.</div><div>
-</div><div>Minimum contribution &nbsp;0.1 ETH.</div><div><br></div><div>◎ Please use <strong><em>IMToken Wallet</em></strong>, <strong><em>TRUST Wallet</em></strong> or <strong><em>MyEtherWallet</em></strong> to receive your token</div><div>◎ Due to unpredictable transaction traffic, please allow 2-6 hours for the token to be delivered to you ERC20 Wallet</div><div><br></div><div>Make sure that you send Ether from wallet that supports ERC20 tokens or from an address for which you control the private key. Otherwise you will not be able interact with the GTMR tokens received. Do not send ETH directly from an exchange to the IEO/ICO address.</div><p></p></div>
+</div><div>Minimum contribution &nbsp;0.1 ETH.</div><div><br></div><div>◎ Please use <strong><em>IMToken Wallet</em></strong>, <strong><em>TRUST Wallet</em></strong> or <strong><em>MyEtherWallet</em></strong> to receive your token</div><div>◎ Due to unpredictable transaction traffic, please allow 2-6 hours for the token to be delivered to you ERC20 Wallet</div><div><br></div><div>Make sure that you send Ether from wallet that supports ERC20 tokens or from an address for which you control the private key. Otherwise you will not be able interact with the GTMR tokens received. Do not send ETH directly from an exchange to the contribution address.</div><p></p></div>
         </div>
     </div>
 
