--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/i">how to build a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -130,7 +130,7 @@
                             <h3 class="mbr-section-title display-2 text-center">&nbsp;GETModer</h3>
 
                             <div class="mbr-section-text lead text-center">
-                                <p>GETMODER IS A BLOCKCHAIN-BASED DECENTRALISED MARKETPLACE FOR BORROWING AND LENDING CRYPTO ASSETS IN A SAFE
+                                <p>GETMODER IS A BLOCKCHAIN-BASED DECENTRALISED MARKET PLACE FOR BORROWING AND LENDING CRYPTO ASSETS IN A SAFE
 AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><br>◎ GENERATE INCOME FROM LENDING
 <br>
 <br>◎ RAISE LIQUIDITY AGAINST CRYPTO COLLATERAL
