--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="108" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="108" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="PX4hsLna3KgGxvE3Vo7Qyo5pD7ijH9XBwCYEx8LqBZ8R4N3vUO4te6GRNx76PWyrDZrz9g0EZbG+opZFC3y8ZYGmpvamuD7B1OgSKeLDUVRHvx8aqI7aiMgkgMVHzu3M" data-form-email="true">
+                                <input type="hidden" value="ttmq5actwuhp0fkn99QwoUPvekLHbzRLHXgCZyCsK+LvTDf0ibTejR36C6x+YHB5enoBmZN0zJmsuNwAXAbVtvvHQh+YuB16LakoqBim7ux7C3IV1cPdTu/OGfRe+11P" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
