--- a/page7.html
+++ b/page7.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-4q" data-rv-view="104">
+<section id="ext_menu-4q" data-rv-view="160">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="108" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="164" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="ttmq5actwuhp0fkn99QwoUPvekLHbzRLHXgCZyCsK+LvTDf0ibTejR36C6x+YHB5enoBmZN0zJmsuNwAXAbVtvvHQh+YuB16LakoqBim7ux7C3IV1cPdTu/OGfRe+11P" data-form-email="true">
+                                <input type="hidden" value="xusvEkt4ySsQ+5PjbmeYCW3HkxtZQ1EZKBnWm71Xv1JIgXDAEED++a/znTq4y9pdxU8rg1hYjtdyCkPfnCTKD+fFR+fzWsO2ULymL22vbpXCNGE6dPdn7vg9+mH5+ye2" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -115,7 +115,7 @@ We will contact you very soon regarding our Early Bird 1 offering via email</div
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="106" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="162" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
